bop ct integration

--- a/config/dimensionalcontrol/presets/test1/biomeproviders/RL.cfg
+++ b/config/dimensionalcontrol/presets/test1/biomeproviders/RL.cfg
@@ -389,15 +389,15 @@ genLayer2.setHill("minecraft:swampland", "minecraft:mutated_swampland")
 genLayer2.setHill("biomesoplenty:lush_desert", ["biomesoplenty:crag","biomesoplenty:steppe","biomesoplenty:oasis","biomesoplenty:seasonal_forest"])
 genLayer2.setHill("biomesoplenty:brushland", ["biomesoplenty:steppe", "biomesoplenty:chaparral","biomesoplenty:mountain_foothills","minecraft:forest_hills"])
 genLayer2.setHill("biomesoplenty:mountain_foothills", "biomesoplenty:mountain")
-genLayer2.setHill("biomesoplenty:flower_field", ["biomesoplenty:mountain_foothills","minecraft:plains","minecraft:forest","minecraft:birch_forest","biomesoplenty:lavender_fields"])
+genLayer2.setHill("biomesoplenty:flower_field", ["minecraft:plains","minecraft:forest","minecraft:birch_forest","biomesoplenty:lavender_fields"])
 genLayer2.setHill("biomesoplenty:prairie", ["minecraft:mutated_forest","minecraft:forest_hills","minecraft:birch_forest_hills"])
 genLayer2.setHill("biomesoplenty:grassland", ["minecraft:mutated_forest","minecraft:forest_hills","minecraft:birch_forest_hills","minecraft:forest","biomesoplenty:woodland"])
 genLayer2.setHill("biomesoplenty:meadow", ["minecraft:forest_hills","minecraft:forest","biomesoplenty:woodland","biomesoplenty:grove","biomesoplenty:pasture","biomesoplenty:seasonal_forest"])
-genLayer2.setHill("biomesoplenty:pasture", ["biomesoplenty:mountain_foothills","minecraft:forest_hills",,"biomesoplenty:seasonal_forest", "minecraft:forest","biomesoplenty:woodland","biomesoplenty:grove","biomesoplenty:land_of_lakes"])
-genLayer2.setHill("biomesoplenty:highland", ["biomesoplenty:mountain_foothills","minecraft:forest_hills", "minecraft:birch_forest_hills","biomesoplenty:seasonal_forest", "biomesoplenty:shield"])
+genLayer2.setHill("biomesoplenty:pasture", ["minecraft:forest_hills",,"biomesoplenty:seasonal_forest", "minecraft:forest","biomesoplenty:woodland","biomesoplenty:grove","biomesoplenty:land_of_lakes"])
+genLayer2.setHill("biomesoplenty:highland", ["minecraft:forest_hills", "minecraft:birch_forest_hills","biomesoplenty:seasonal_forest", "biomesoplenty:shield"])
 genLayer2.setHill("biomesoplenty:grove", ["minecraft:forest_hills"])
 genLayer2.setHill("biomesoplenty:lush_swamp", ["minecraft:swampland", "minecraft:forest_hills", "minecraft:mutated_swampland"])
-genLayer2.setHill("biomesoplenty:quagmire", ["biomesoplenty:shield","biomesoplenty:mountain_foothills", "minecraft:taiga"])
+genLayer2.setHill("biomesoplenty:quagmire", ["biomesoplenty:shield", "minecraft:taiga"])
 genLayer2.setHill("biomesoplenty:land_of_lakes", ["biomesoplenty:mountain_foothills","biomesoplenty:meadow","biomesoplenty:grassland"])
 genLayer2.setHill("biomesoplenty:bog", ["biomesoplenty:mountain_foothills","biomesoplenty:meadow","biomesoplenty:grassland"])
 genLayer2.setHill("biomesoplenty:shield", ["biomesoplenty:mountain_foothills","minecraft:smaller_extreme_hills"])
@@ -599,7 +599,6 @@ finalGenLayer1.setRiverBiome("biomesoplenty:pasture", "minecraft:river")
 finalGenLayer1.setRiverBiome("biomesoplenty:seasonal_forest", "minecraft:river")
 finalGenLayer1.setRiverBiome("biomesoplenty:grassland", "minecraft:river")
 finalGenLayer1.setRiverBiome("biomesoplenty:orchard", "minecraft:river")
-finalGenLayer1.setRiverBiome("biomesoplenty:mountain_foothills", "minecraft:river")
 finalGenLayer1.setRiverBiome("minecraft:jungle_hills", "minecraft:river")
 finalGenLayer1.setRiverBiome("minecraft:mutated_swampland", "minecraft:river")
 finalGenLayer1.setRiverBiome("minecraft:mutated_jungle", "minecraft:river")
