--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -85,26 +85,31 @@ general {
         minecraft:skull:1:*=reskillable:building|8,reskillable:magic|8
         minecraft:fireworks:*=reskillable:agility|4
         minecraft:anvil:*=reskillable:building|12
-        minecraft:brewing_stand:*=reskillable:building|8,reskillable:magic|5
+        minecraft:brewing_stand:*=reskillable:building|8
+        rustic:condenser:*=reskillable:gathering|4
+        rustic:condenser_advanced:*=reskillable:gathering|8
         minecraft:enchanting_table:*=reskillable:building|8,reskillable:magic|20
+        rustic:chili_pepper_seeds:*=reskillable:farming|4
+        rustic:tomato_seeds:*=reskillable:farming|4
+        rustic:grape_stem:*=reskillable:farming|4
         notreepunching:knife/copper:*=reskillable:gathering|2
         notreepunching:knife/bronze:*=reskillable:gathering|6
-        notreepunching:knife/gold:*=reskillable:gathering|4,reskillable:magic|4
+        notreepunching:knife/gold:*=reskillable:gathering|4,reskillable:magic|2
         notreepunching:knife/iron:*=reskillable:gathering|8
         notreepunching:knife/steel:*=reskillable:gathering|12
         notreepunching:knife/diamond:*=reskillable:gathering|16
-        notreepunching:saw/gold:*=reskillable:gathering|4,reskillable:magic|4
+        notreepunching:saw/gold:*=reskillable:gathering|4,reskillable:magic|2
         notreepunching:saw/copper:*=reskillable:gathering|2
         notreepunching:saw/bronze:*=reskillable:gathering|6
         notreepunching:saw/iron:*=reskillable:gathering|8
         notreepunching:saw/steel:*=reskillable:gathering|12
         notreepunching:saw/diamond:*=reskillable:gathering|16
-        notreepunching:mattock/copper:*=reskillable:gathering|2
-        notreepunching:mattock/bronze:*=reskillable:gathering|6
-        notreepunching:mattock/gold:*=reskillable:gathering|4,reskillable:magic|4
-        notreepunching:mattock/iron:*=reskillable:gathering|8
-        notreepunching:mattock/steel:*=reskillable:gathering|12
-        notreepunching:mattock/diamond:*=reskillable:gathering|16
+        notreepunching:mattock/copper:*=reskillable:gathering|2,reskillable:farming|2
+        notreepunching:mattock/bronze:*=reskillable:gathering|4,reskillable:farming|4
+        notreepunching:mattock/gold:*=reskillable:gathering|2,reskillable:farming|2,reskillable:magic|2
+        notreepunching:mattock/iron:*=reskillable:gathering|6,reskillable:farming|6
+        notreepunching:mattock/steel:*=reskillable:gathering|8,reskillable:farming|8
+        notreepunching:mattock/diamond:*=reskillable:gathering|12,reskillable:farming|12
         switchbow:switchbow:*=reskillable:attack|4,reskillable:agility|6,reskillable:magic|3
         switchbow:switchcrossbow:*=reskillable:attack|6,reskillable:agility|4,reskillable:magic|3
         toolbelt:belt:*=reskillable:agility|4
@@ -116,9 +121,17 @@ general {
         minecraft:gold_ore:*=reskillable:mining|2,reskillable:magic|2
         minecraft:lapis_ore:*=reskillable:mining|4,reskillable:magic|6
         minecraft:redstone_ore:*=reskillable:mining|6
-        minecraft:diamond_ore:*=reskillable:mining|8
+        minecraft:diamond_ore:*=reskillable:mining|12
         minecraft:emerald_ore:*=reskillable:mining|8
         minecraft:quartz_ore:*=reskillable:mining|4
+        biomesoplenty:gem_ore:0:*=reskillable:mining|10
+        biomesoplenty:gem_ore:1:*=reskillable:mining|10
+        biomesoplenty:gem_ore:2:*=reskillable:mining|10
+        biomesoplenty:gem_ore:3:*=reskillable:mining|10
+        biomesoplenty:gem_ore:4:*=reskillable:mining|10
+        biomesoplenty:gem_ore:5:*=reskillable:mining|10
+        biomesoplenty:gem_ore:6:*=reskillable:mining|10
+        biomesoplenty:gem_ore:7:*=reskillable:mining|10
         mysticalworld:copper_ore:*=reskillable:mining|2
         mysticalworld:amethyst_ore:*=reskillable:mining|4,reskillable:magic|4
         thaumcraft:ore_quartz:*=reskillable:mining|4
@@ -173,33 +186,62 @@ general {
         immersiveengineering:metal_device1:10:*=reskillable:building|14
         immersiveengineering:metal_device1:11:*=reskillable:building|14
         minecraft:reeds:*=reskillable:farming|4
+        biomesoplenty:plant_1:5:*=reskillable:farming|4
         minecraft:wheat_seeds:*=reskillable:farming|2
-        minecraft:carrot:*=reskillable:farming|4
-        minecraft:potato:*=reskillable:farming|4
-        minecraft:beetroot_seeds:*=reskillable:farming|4
+        minecraft:carrot:*=reskillable:farming|2
+        minecraft:potato:*=reskillable:farming|2
+        minecraft:beetroot_seeds:*=reskillable:farming|2
         minecraft:pumpkin_seeds:*=reskillable:farming|6
         minecraft:melon_seeds:*=reskillable:farming|6
-        minecraft:cactus:*=reskillable:farming|6
+        minecraft:cactus:*=reskillable:farming|4
         minecraft:sapling:0:*=reskillable:farming|6
         minecraft:sapling:1:*=reskillable:farming|6
         minecraft:sapling:2:*=reskillable:farming|6
         minecraft:sapling:3:*=reskillable:farming|6
         minecraft:sapling:4:*=reskillable:farming|6
         minecraft:sapling:5:*=reskillable:farming|6
-        defiledlands:blastem_seed:*=reskillable:farming|10
-        dynamictrees:appleseed:*=reskillable:farming|6
-        dynamictrees:oakseed:*=reskillable:farming|6
-        dynamictrees:spruceseed:*=reskillable:farming|6
-        dynamictrees:birchseed:*=reskillable:farming|6
-        dynamictrees:jungleseed:*=reskillable:farming|6
-        dynamictrees:acaciaseed:*=reskillable:farming|6
-        dynamictrees:darkoakseed:*=reskillable:farming|6
-        dynamictrees:cactusseed:*=reskillable:farming|6
-        dttraverse:autumn_yellowseed:*=reskillable:farming|6
-        dttraverse:autumn_orangeseed:*=reskillable:farming|6
-        dttraverse:autumn_redseed:*=reskillable:farming|6
-        dttraverse:autumn_brownseed:*=reskillable:farming|6
-        dttraverse:firseed:*=reskillable:farming|6
+        rustic:sapling_apple:*=reskillable:farming|6
+        rustic:sapling:0:*=reskillable:farming|6
+        rustic:sapling:1:*=reskillable:farming|6
+        rustic:apple_seeds:*=reskillable:farming|6
+        biomesoplenty:sapling_0:0:*=reskillable:farming|6
+        biomesoplenty:sapling_0:1:*=reskillable:farming|6
+        biomesoplenty:sapling_0:2:*=reskillable:farming|6
+        biomesoplenty:sapling_0:3:*=reskillable:farming|6
+        biomesoplenty:sapling_0:4:*=reskillable:farming|6
+        biomesoplenty:sapling_0:5:*=reskillable:farming|6
+        biomesoplenty:sapling_0:6:*=reskillable:farming|6
+        biomesoplenty:sapling_0:7:*=reskillable:farming|6
+        biomesoplenty:sapling_1:1:*=reskillable:farming|6
+        biomesoplenty:sapling_1:2:*=reskillable:farming|6
+        biomesoplenty:sapling_1:3:*=reskillable:farming|6
+        biomesoplenty:sapling_1:4:*=reskillable:farming|6
+        biomesoplenty:sapling_1:5:*=reskillable:farming|6
+        biomesoplenty:sapling_1:6:*=reskillable:farming|6
+        biomesoplenty:sapling_1:7:*=reskillable:farming|6
+        biomesoplenty:sapling_2:0:*=reskillable:farming|6
+        biomesoplenty:sapling_2:1:*=reskillable:farming|6
+        biomesoplenty:sapling_2:2:*=reskillable:farming|6
+        biomesoplenty:sapling_2:3:*=reskillable:farming|6
+        biomesoplenty:sapling_2:4:*=reskillable:farming|6
+        biomesoplenty:sapling_2:5:*=reskillable:farming|6
+        biomesoplenty:sapling_2:6:*=reskillable:farming|6
+        biomesoplenty:sapling_2:7:*=reskillable:farming|6
+        defiledlands:tenebra_sapling:*=reskillable:farming|10
+        quark:variant_sapling:0:*=reskillable:farming|6
+        quark:variant_sapling:1:*=reskillable:farming|6
+        twilightforest:twilight_sapling:0:*=reskillable:farming|18
+        twilightforest:twilight_sapling:1:*=reskillable:farming|18
+        twilightforest:twilight_sapling:2:*=reskillable:farming|18
+        twilightforest:twilight_sapling:3:*=reskillable:farming|18
+        twilightforest:twilight_sapling:4:*=reskillable:farming|18
+        twilightforest:twilight_sapling:5:*=reskillable:farming|18
+        twilightforest:twilight_sapling:6:*=reskillable:farming|18
+        twilightforest:twilight_sapling:7:*=reskillable:farming|18
+        twilightforest:twilight_sapling:8:*=reskillable:farming|18
+        twilightforest:twilight_sapling:9:*=reskillable:farming|18
+
+        defiledlands:blastem_seed:*=reskillable:farming|8
         minecraft:chainmail_helmet:*=reskillable:defense|3,reskillable:agility|3
         minecraft:chainmail_chestplate:*=reskillable:defense|3,reskillable:agility|3
         minecraft:chainmail_leggings:*=reskillable:defense|3,reskillable:agility|3
@@ -952,31 +994,31 @@ general {
         ebwizardry:battlemage_chestplate_healing:*=reskillable:magic|20,reskillable:attack|12
         ebwizardry:battlemage_leggings_healing:*=reskillable:magic|20,reskillable:attack|12
         ebwizardry:battlemage_boots_healing:*=reskillable:magic|20,reskillable:attack|12
-        ebwizardry:warlock_hat_fire:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_fire:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_fire:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_leggings_fire:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_fire:*=reskillable:magic|20,reskillable:agility|12
-        ebwizardry:warlock_hat_ice:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_ice:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_ice:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_leggings_ice:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_ice:*=reskillable:magic|20,reskillable:agility|12
-        ebwizardry:warlock_hat_lightning:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_lightning:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_lightning:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_leggings_lightning:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_lightning:*=reskillable:magic|20,reskillable:agility|12
-        ebwizardry:warlock_hat_necromancy:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_necromancy:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_necromancy:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_leggings_necromancy:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_necromancy:*=reskillable:magic|20,reskillable:agility|12
-        ebwizardry:warlock_hat_earth:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_earth:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_earth:*=reskillable:magic|20,reskillable:agility|22
         ebwizardry:warlock_leggings_earth:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_earth:*=reskillable:magic|18,reskillable:agility|12
-        ebwizardry:warlock_hat_sorcery:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_sorcery:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_sorcery:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_leggings_sorcery:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_sorcery:*=reskillable:magic|20,reskillable:agility|12
-        ebwizardry:warlock_hat_healing:*=reskillable:magic|20,reskillable:agility|12
+        ebwizardry:warlock_hood_healing:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_robe_healing:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_leggings_healing:*=reskillable:magic|20,reskillable:agility|12
         ebwizardry:warlock_boots_healing:*=reskillable:magic|20,reskillable:agility|12
