--- a/config/treechopper/treechopper.cfg
+++ b/config/treechopper/treechopper.cfg
@@ -42,9 +42,11 @@ data {
         tile.natura.nether_logs2
         tile.natura.overworld_logs
         tile.natura.overworld_logs2
+        tile.naturesaura.ancient_log
+        tile.naturesaura.ancient_bark
      >
 
-    # Put here allowed items(axes),  [default: [item.hatchetWood], [item.hatchetStone], [item.hatchetIron], [item.hatchetGold], [item.hatchetDiamond], [item.mud_axe], [item.psi:psimetalAxe], [item.tconstruct.lumberaxe], [item.tconstruct.mattock], [item.tconstruct.hatchet], [item.brain_stone_axe], [item.stable_pulsating_brain_stone_axe], [item.adobe_axe], [item.ObsidianAxe], [item.LazuliAxe], [item.OsmiumAxe], [item.BronzeAxe], [item.GlowstoneAxe], [item.SteelAxe], [item.LapisLazuliAxe], [item.peridotAxe], [item.rubyAxe], [item.sapphireAxe], [item.bronzeAxe], [item.mud_axe], [ic2.chainsaw], [item.itemcrystalaxe], [item.itemchargedcrystalaxe], [item.axe_copper], [item.axe_silver], [item.axe_lead], [item.axe_dawnstone], [item.axe_aluminum], [item.axe_bronze], [item.axe_electrum], [item.axe_nickel], [item.axe_tin], [item.WoodPaxel], [item.StonePaxel], [item.IronPaxel], [item.DiamondPaxel], [item.GoldPaxel], [item.ObsidianPaxel], [item.LapisLazuliPaxel], [item.OsmiumPaxel], [item.BronzePaxel], [item.GlowstonePaxel], [item.SteelPaxel], [item.ma.inferium_axe], [item.ma.prudentium_axe], [item.ma.intermedium_axe], [item.ma.superium_axe], [item.ma.supremium_axe], [item.psimetal_axe], [item.netheraxt], [item.stahlaxt], [item.teufelseisenaxt], [item.flintAxt], [item.flint_axe], [item.bone_axe], [item.emerald_axe], [item.obsidian_axe], [item.diamond_multi], [item.emerald_multi], [item.golden_multi], [item.iron_multi], [item.obsidian_multi], [item.stone_multi], [item.wooden_multi], [item.natura.ghostwood_axe], [item.natura.bloodwood_axe], [item.natura.darkwood_axe], [item.natura.fusewood_axe], [item.natura.netherquartz_axe], [item.terraAxe], [item.elementiumAxe], [item.manasteelAxe], [item.actuallyadditions.item_axe_quartz], [item.actuallyadditions.item_axe_emerald], [item.actuallyadditions.item_axe_obsidian], [item.actuallyadditions.item_axe_crystal_red], [item.actuallyadditions.item_axe_crystal_blue], [item.actuallyadditions.item_axe_crystal_light_blue], [item.actuallyadditions.item_axe_crystal_black], [item.actuallyadditions.item_axe_crystal_green], [item.actuallyadditions.item_axe_crystal_white], [item.daxe], [item.aaxe], [item.coraxe], [item.dreadiumaxe], [item.ethaxiumaxe], [item.crystal_axe], [item.crystal_axe_bone], [item.dungeontactics:gilded_axe], [item.dungeontactics:jewelled_axe], [item.flint_axe], [item.quartz_axe], [item.obsidian_axe], [item.opal_axe], [item.diamond_axe]]
+    # Put here allowed items(axes),  [default: [item.hatchetWood], [item.hatchetStone], [item.hatchetIron], [item.hatchetGold], [item.hatchetDiamond], [item.mud_axe], [item.psi:psimetalAxe], [item.tconstruct.lumberaxe], [item.tconstruct:mattock], [item.tconstruct.hatchet], [item.brain_stone_axe], [item.stable_pulsating_brain_stone_axe], [item.adobe_axe], [item.ObsidianAxe], [item.LazuliAxe], [item.OsmiumAxe], [item.BronzeAxe], [item.GlowstoneAxe], [item.SteelAxe], [item.LapisLazuliAxe], [item.peridotAxe], [item.rubyAxe], [item.sapphireAxe], [item.bronzeAxe], [item.mud_axe], [ic2.chainsaw], [item.itemcrystalaxe], [item.itemchargedcrystalaxe], [item.axe_copper], [item.axe_silver], [item.axe_lead], [item.axe_dawnstone], [item.axe_aluminum], [item.axe_bronze], [item.axe_electrum], [item.axe_nickel], [item.axe_tin], [item.WoodPaxel], [item.StonePaxel], [item.IronPaxel], [item.DiamondPaxel], [item.GoldPaxel], [item.ObsidianPaxel], [item.LapisLazuliPaxel], [item.OsmiumPaxel], [item.BronzePaxel], [item.GlowstonePaxel], [item.SteelPaxel], [item.ma.inferium_axe], [item.ma.prudentium_axe], [item.ma.intermedium_axe], [item.ma.superium_axe], [item.ma.supremium_axe], [item.psimetal_axe], [item.netheraxt], [item.stahlaxt], [item.teufelseisenaxt], [item.flintAxt], [item.flint_axe], [item.bone_axe], [item.emerald_axe], [item.obsidian_axe], [item.diamond_multi], [item.emerald_multi], [item.golden_multi], [item.iron_multi], [item.obsidian_multi], [item.stone_multi], [item.wooden_multi], [item.natura.ghostwood_axe], [item.natura.bloodwood_axe], [item.natura.darkwood_axe], [item.natura.fusewood_axe], [item.natura.netherquartz_axe], [item.terraAxe], [item.elementiumAxe], [item.manasteelAxe], [item.actuallyadditions.item_axe_quartz], [item.actuallyadditions.item_axe_emerald], [item.actuallyadditions.item_axe_obsidian], [item.actuallyadditions.item_axe_crystal_red], [item.actuallyadditions.item_axe_crystal_blue], [item.actuallyadditions.item_axe_crystal_light_blue], [item.actuallyadditions.item_axe_crystal_black], [item.actuallyadditions.item_axe_crystal_green], [item.actuallyadditions.item_axe_crystal_white], [item.daxe], [item.aaxe], [item.coraxe], [item.dreadiumaxe], [item.ethaxiumaxe], [item.crystal_axe], [item.crystal_axe_bone], [item.dungeontactics:gilded_axe], [item.dungeontactics:jewelled_axe], [item.flint_axe], [item.quartz_axe], [item.obsidian_axe], [item.opal_axe], [item.diamond_axe]]
     S:"Whitelisted items" <
         item.hatchetWood
         item.hatchetStone
@@ -54,7 +56,7 @@ data {
         item.mud_axe
         item.psi:psimetalAxe
         item.tconstruct.lumberaxe
-        item.tconstruct.mattock
+        item.tconstruct:mattock
         item.tconstruct.hatchet
         item.brain_stone_axe
         item.stable_pulsating_brain_stone_axe
@@ -148,18 +150,18 @@ data {
         item.diamond_axe
 		item.mysticalworld.amethyst_axe
 		item.iceandfire.silver_axe
-        item.notreepunching.saw/gold
-        item.notreepunching.saw/copper
-        item.notreepunching.saw/bronze
-        item.notreepunching.saw/iron
-        item.notreepunching.saw/steel
-        item.notreepunching.saw/diamond
-        item.notreepunching.mattock/copper
-        item.notreepunching.mattock/bronze
-        item.notreepunching.mattock/gold
-        item.notreepunching.mattock/iron
-        item.notreepunching.mattock/steel
-        item.notreepunching.mattock/diamond
+        item.notreepunching:saw.gold
+        item.notreepunching:saw.copper
+        item.notreepunching:saw.bronze
+        item.notreepunching:saw.iron
+        item.notreepunching:saw.steel
+        item.notreepunching:saw.diamond
+        item.notreepunching:mattock.copper
+        item.notreepunching:mattock.bronze
+        item.notreepunching:mattock.gold
+        item.notreepunching:mattock.iron
+        item.notreepunching:mattock.steel
+        item.notreepunching:mattock.diamond
         item.immersiveengineering.axe_steel
         item.iceandfire.dragonbone_axe
         item.iceandfire.dragonsteel_fire_axe
@@ -167,33 +169,30 @@ data {
         item.iceandfire.myrmex_desert_axe
         item.iceandfire.myrmex_jungle_axe
         item.iceandfire.troll_weapon.axe
-        item.spartanweaponry.battleaxe_iron
-        item.spartanweaponry.battleaxe_bronze
-        item.spartanweaponry.battleaxe_stone
-        item.spartanweaponry.battleaxe_silver
-        item.spartanweaponry.battleaxe_gold
-        item.spartanweaponry.battleaxe_diamond
-        item.spartanfire.battleaxe_dragonbone
-        item.spartanfire.battleaxe_fire_dragonbone
-        item.spartanfire.battleaxe_ice_dragonbone
-        item.spartanfire.battleaxe_fire_dragonsteel
-        item.spartanfire.battleaxe_ice_dragonsteel
+        item.spartanweaponry:battleaxe_iron
+        item.spartanweaponry:battleaxe_bronze
+        item.spartanweaponry:battleaxe_stone
+        item.spartanweaponry:battleaxe_silver
+        item.spartanweaponry:battleaxe_gold
+        item.spartanweaponry:battleaxe_diamond
+        item.spartanfire:battleaxe_dragonbone
+        item.spartanfire:battleaxe_fire_dragonbone
+        item.spartanfire:battleaxe_ice_dragonbone
+        item.spartanfire:battleaxe_fire_dragonsteel
+        item.spartanfire:battleaxe_ice_dragonsteel
         item.defiledlands.umbrium_axe
         item.defiledlands.ravaging_axe
-        item.spartanfire.battleaxe_jungle
-        item.spartanfire.battleaxe_desert
-        item.spartanfire.battleaxe_jungle_venom
-        item.spartanfire.battleaxe_desert_venom
-        item.aquaculture.neptunium_axe
-        item.mowziesmobs.wrought_axe
-        item.mysticalworld.copper_axe
-        item.mysticalworld.silver_axe
-        item.mysticalworld.amethyst_axe
-        item.roots.living_axe
+        item.spartanfire:battleaxe_jungle
+        item.spartanfire:battleaxe_desert
+        item.spartanfire:battleaxe_jungle_venom
+        item.spartanfire:battleaxe_desert_venom
+        item.aquaculture:neptunium_axe
+        item.wroughtAxe
+        item.copper_axe
+        item.silver_axe
+        item.amethyst_axe
+        item.living_axe
         item.naturesaura.infused_iron_axe
-        item.
-        item.
-        item.
 
 
      >
