--- a/config/battletowers.cfg
+++ b/config/battletowers.cfg
@@ -95,6 +95,7 @@ biomespawnallowed {
     B:extreme_hills=true
     B:extreme_hills_with_trees=true
     B:fen=true
+    B:flower_field=true
     B:forest=true
     B:forest_hills=true
     B:forest_tenebra=true
