--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -338,7 +338,7 @@ permittedentities {
     B:EntityDreadThrall=true
     B:EntityDruden=true
     B:EntityDweller=true
-    B:EntityElderGuardian=true
+    B:EntityElderGuardian=false
     B:EntityEldritchCrab=true
     B:EntityEnderman=true
     B:EntityEndermite=true
@@ -359,7 +359,7 @@ permittedentities {
     B:EntityGuardian=true
     B:EntityHost=true
     B:EntityHusk=true
-    B:EntityHydra=true
+    B:EntityHydra=false
     B:EntityImp=true
     B:EntityKrake=false
     B:EntityLeonard=true
@@ -390,19 +390,19 @@ permittedentities {
     B:EntityTFBlockGoblin=true
     B:EntityTFDeathTome=true
     B:EntityTFFireBeetle=true
-    B:EntityTFGiantMiner=true
+    B:EntityTFGiantMiner=false
     B:EntityTFHarbingerCube=true
     B:EntityTFHedgeSpider=true
     B:EntityTFHelmetCrab=true
-    B:EntityTFHydra=true
+    B:EntityTFHydra=false
     B:EntityTFIceCrystal=true
-    B:EntityTFKingSpider=true
-    B:EntityTFKnightPhantom=true
+    B:EntityTFKingSpider=false
+    B:EntityTFKnightPhantom=false
     B:EntityTFKobold=true
-    B:EntityTFLich=true
+    B:EntityTFLich=false
     B:EntityTFLichMinion=true
     B:EntityTFMazeSlime=true
-    B:EntityTFMinoshroom=true
+    B:EntityTFMinoshroom=false
     B:EntityTFMinotaur=true
     B:EntityTFMosquitoSwarm=true
     B:EntityTFNaga=true
@@ -410,7 +410,7 @@ permittedentities {
     B:EntityTFRedcapSapper=true
     B:EntityTFSkeletonDruid=true
     B:EntityTFSlimeBeetle=true
-    B:EntityTFSnowQueen=true
+    B:EntityTFSnowQueen=false
     B:EntityTFSwarmSpider=true
     B:EntityTFTroll=true
     B:EntityTFWraith=true
@@ -434,7 +434,7 @@ permittedentities {
     B:MoCEntityCaveOgre=true
     B:MoCEntityFireOgre=true
     B:MoCEntityFlameWraith=true
-    B:MoCEntityGolem=true
+    B:MoCEntityGolem=false
     B:MoCEntityGreenOgre=true
     B:MoCEntityHellRat=true
     B:MoCEntityHorseMob=true
