--- a/config/torohealthmod.cfg
+++ b/config/torohealthmod.cfg
@@ -2,7 +2,7 @@
 
 client {
     # Damage Text Color [default: RED]
-    S:"Damage Color"=YELLOW
+    S:"Damage Color"=ORANGE
 
     # Heal Text Color [default: GREEN]
     S:"Heal Color"=GREEN
@@ -11,25 +11,25 @@ client {
     S:"Health Bar Display"=BAR
 
     # Location of Health Bar [default: TOP LEFT]
-    S:"Health Bar Position"=TOP CENTER
+    S:"Health Bar Position"=TOP LEFT
 
     # With CUSTOM position, sets X position of Health Bar [range: -20000 ~ 20000, default: 0]
-    I:"Health Bar X"=0
+    I:"Health Bar X"=10
 
     # With CUSTOM position, sets Y position of Health Bar [range: -20000 ~ 20000, default: 0]
-    I:"Health Bar Y"=38
+    I:"Health Bar Y"=25
 
     # Delays hiding the dialog for the given number of milliseconds [range: 50 ~ 5000, default: 400]
     I:"Hide Delay"=400
 
     # Shows a 3D model of the entity being targeted [default: true]
-    B:"Show 3D Model of Entity"=false
+    B:"Show 3D Model of Entity"=true
 
     # Show Damage Indicators [default: true]
     B:"Show Damage Particles"=false
 
     # Background Skin Selection [default: BASIC]
-    S:Skin=BASIC
+    S:Skin=NONE
 }
 
 
