port twilight forest

--- a/config/battletowers.cfg
+++ b/config/battletowers.cfg
@@ -66,41 +66,62 @@ biomespawnallowed {
     B:Taiga=true
     B:TaigaHills=true
     B:"The Void"=true
+    B:alps=true
+    B:alps_foothills=true
     B:arid_highland=true
     B:autumnal_wooded_hills=true
     B:autumnal_woods=true
     B:badlands=true
+    B:bamboo_forest=true
     B:bayou=true
     B:bbluespruceforest=true
     B:beaches=true
     B:birch_forest=true
     B:birch_forest_hills=true
     B:birch_forested_hills=true
+    B:bog=true
     B:borchard=true
+    B:boreal_forest=true
     B:bpraire=true
     B:brushland=true
     B:bstellatapasture=true
     B:bzelkovaforest=true
     B:canyon=true
+    B:chaparral=true
+    B:cherry_blossom_grove=true
     B:cliffs=true
     B:cold_beach=true
+    B:cold_desert=true
     B:coniferous_forest=true
+    B:corrupted_sands=true
     B:crag_cliffs=true
     B:dark_forest=true
+    B:dark_forest_center=true
+    B:dead_forest=true
+    B:dead_swamp=true
+    B:deep_mushroom_forest=true
     B:deep_ocean=true
+    B:dense_twilight_forest=true
     B:desert=true
     B:desert_defiled=true
     B:desert_hills=true
     B:desert_shrubland=true
+    B:enchanted_forest=true
+    B:eucalyptus_forest=true
     B:extreme_hills=true
     B:extreme_hills_with_trees=true
     B:fen=true
+    B:fire_swamp=true
+    B:firefly_forest=true
+    B:flower_field=true
     B:forest=true
     B:forest_hills=true
     B:forest_tenebra=true
     B:forest_vilespine=true
     B:forested_hills=true
+    B:frozen_ocean=true
     B:frozen_river=true
+    B:fungi_forest=true
     B:glacier=true
     B:glacier_spikes=true
     B:grassland=true
@@ -108,6 +129,8 @@ biomespawnallowed {
     B:greatGapB=true
     B:green_swamp=true
     B:grove=true
+    B:highland=true
+    B:highlands_center=true
     B:hills_defiled=true
     B:ice_flats=true
     B:ice_mountains=true
@@ -116,8 +139,13 @@ biomespawnallowed {
     B:jungle_edge=true
     B:jungle_hills=true
     B:kelp_forest=true
+    B:land_of_lakes=true
+    B:lavender_fields=true
+    B:lush_desert=true
     B:lush_hills=true
+    B:lush_swamp=true
     B:madagascar_rainforest=true
+    B:maple_woods=true
     B:marsh=true
     B:meadow=true
     B:mesa=true
@@ -125,6 +153,8 @@ biomespawnallowed {
     B:mesa_rock=true
     B:mini_jungle=true
     B:moor=true
+    B:mountain=true
+    B:mountain_foothills=true
     B:mountainous_desert=true
     B:mushroom_forest=true
     B:mutated_birch_forest=true
@@ -133,20 +163,30 @@ biomespawnallowed {
     B:mutated_extreme_hills=true
     B:mutated_extreme_hills_with_trees=true
     B:mutated_forest=true
+    B:mutated_ice_flats=true
     B:mutated_jungle=true
     B:mutated_mesa=true
     B:mutated_plains=true
+    B:mutated_redwood_taiga=true
     B:mutated_roofed_forest=true
     B:mutated_savanna=true
+    B:mutated_savanna_rock=true
+    B:mutated_swampland=true
     B:mutated_taiga=true
+    B:mutated_taiga_cold=true
     B:mystic_grove=true
     B:oak_savannah=true
+    B:oasis=true
     B:ocean=true
     B:ominous_woods=true
+    B:orchard=true
+    B:overgrown_cliffs=true
     B:pasture=true
+    B:phantasmagoric_inferno=true
     B:plains=true
     B:plains_defiled=true
     B:prairie=true
+    B:quagmire=true
     B:rainforest=true
     B:red_desert=true
     B:redwood_forest=true
@@ -156,11 +196,17 @@ biomespawnallowed {
     B:rocky_plains=true
     B:rocky_plateau=true
     B:roofed_forest=true
+    B:sacred_springs=true
     B:savanna=true
     B:savanna_rock=true
+    B:seasonal_forest=true
+    B:shield=true
     B:shrubland=true
     B:sky=true
+    B:smaller_extreme_hills=true
     B:snowy_coniferous_forest=true
+    B:snowy_forest=true
+    B:snowy_tundra=true
     B:steppe=true
     B:stone_beach=true
     B:swamp_defiled=true
@@ -171,15 +217,29 @@ biomespawnallowed {
     B:taiga_hills=true
     B:temperate_rainforest=true
     B:thicket=true
+    B:thornlands=true
+    B:tropical_rainforest=true
+    B:tundra=true
+    B:twilight_clearing=true
     B:twilight_forest=true
+    B:twilight_glacier=true
+    B:twilight_highlands=true
+    B:twilight_lake=true
     B:twilight_stream=true
+    B:twilight_swamp=true
+    B:undergarden=true
+    B:visceral_heap=true
+    B:wasteland=true
+    B:wetland=true
     B:woodland=true
     B:woodlands=true
+    B:wyvernbiome=true
 }
 
 
 chunkproviderallowed {
     B:ChunkProviderServer=true
+    B:DummyChunkProvider=true
 }
 
 
