--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -90,6 +90,8 @@ entitiesalwaysinfernal {
     B:EntityTFDeathTome=false
     B:EntityTFFireBeetle=false
     B:EntityTFGiantMiner=false
+    B:EntityTFGoblinKnightLower=false
+    B:EntityTFGoblinKnightUpper=false
     B:EntityTFHarbingerCube=false
     B:EntityTFHedgeSpider=false
     B:EntityTFHelmetCrab=false
@@ -101,6 +103,7 @@ entitiesalwaysinfernal {
     B:EntityTFLich=false
     B:EntityTFLichMinion=false
     B:EntityTFMazeSlime=false
+    B:EntityTFMiniGhast=false
     B:EntityTFMinoshroom=false
     B:EntityTFMinotaur=false
     B:EntityTFMosquitoSwarm=false
@@ -111,8 +114,12 @@ entitiesalwaysinfernal {
     B:EntityTFSlimeBeetle=false
     B:EntityTFSnowQueen=false
     B:EntityTFSwarmSpider=false
+    B:EntityTFTowerBroodling=false
     B:EntityTFTroll=false
+    B:EntityTFUrGhast=false
     B:EntityTFWraith=false
+    B:EntityTFYeti=false
+    B:EntityTFYetiAlpha=false
     B:EntityTreant=false
     B:EntityTrite=false
     B:EntityTroll=false
@@ -170,6 +177,12 @@ entitybasehealth {
     D:EntityCryptkeeper=30.049598693847656
     D:EntityCultistPortalLesser=127.73128509521484
     D:EntityCyclops=150.00149536132812
+    D:EntityDreadBeast=30.0
+    D:EntityDreadGhoul=30.0
+    D:EntityDreadKnight=40.0
+    D:EntityDreadLich=50.0
+    D:EntityDreadScuttler=40.0
+    D:EntityDreadThrall=20.0
     D:EntityDweller=20.0
     D:EntityElderGuardian=80.00194549560547
     D:EntityEnderman=40.0
@@ -216,14 +229,18 @@ entitybasehealth {
     D:EntityTFDeathTome=517.3975219726562
     D:EntityTFFireBeetle=565.4730834960938
     D:EntityTFHelmetCrab=800.0
+    D:EntityTFIceCrystal=132.4229278564453
+    D:EntityTFKingSpider=30.0
     D:EntityTFKobold=13.0
     D:EntityTFLich=5000.0
     D:EntityTFMinoshroom=6000.0
+    D:EntityTFNaga=200.0
     D:EntityTFRedcap=500.0
     D:EntityTFRedcapSapper=600.0
     D:EntityTFSkeletonDruid=500.0
     D:EntityTFSlimeBeetle=758.3424072265625
     D:EntityTFSwarmSpider=58.8850212097168
+    D:EntityTFYeti=292.8366394042969
     D:EntityTreant=132.0
     D:EntityTrite=5.5
     D:EntityTroll=50.0
@@ -391,6 +408,8 @@ permittedentities {
     B:EntityTFDeathTome=true
     B:EntityTFFireBeetle=true
     B:EntityTFGiantMiner=true
+    B:EntityTFGoblinKnightLower=true
+    B:EntityTFGoblinKnightUpper=true
     B:EntityTFHarbingerCube=true
     B:EntityTFHedgeSpider=true
     B:EntityTFHelmetCrab=true
@@ -402,6 +421,7 @@ permittedentities {
     B:EntityTFLich=true
     B:EntityTFLichMinion=true
     B:EntityTFMazeSlime=true
+    B:EntityTFMiniGhast=true
     B:EntityTFMinoshroom=true
     B:EntityTFMinotaur=true
     B:EntityTFMosquitoSwarm=true
@@ -412,8 +432,12 @@ permittedentities {
     B:EntityTFSlimeBeetle=true
     B:EntityTFSnowQueen=true
     B:EntityTFSwarmSpider=true
+    B:EntityTFTowerBroodling=true
     B:EntityTFTroll=true
+    B:EntityTFUrGhast=true
     B:EntityTFWraith=true
+    B:EntityTFYeti=true
+    B:EntityTFYetiAlpha=true
     B:EntityTreant=true
     B:EntityTrite=true
     B:EntityTroll=true
