--- a/config/torohealthmod.cfg
+++ b/config/torohealthmod.cfg
@@ -2,7 +2,7 @@
 
 client {
     # Damage Text Color [default: RED]
-    S:"Damage Color"=YELLOW
+    S:"Damage Color"=RED
 
     # Heal Text Color [default: GREEN]
     S:"Heal Color"=GREEN
@@ -11,7 +11,7 @@ client {
     S:"Health Bar Display"=BAR
 
     # Location of Health Bar [default: TOP LEFT]
-    S:"Health Bar Position"=TOP CENTER
+    S:"Health Bar Position"=TOP RIGHT
 
     # With CUSTOM position, sets X position of Health Bar [range: -20000 ~ 20000, default: 0]
     I:"Health Bar X"=0
@@ -29,7 +29,7 @@ client {
     B:"Show Damage Particles"=false
 
     # Background Skin Selection [default: BASIC]
-    S:Skin=BASIC
+    S:Skin=NONE
 }
 
 
