--- a/config/ZombieAwareness/MobLists.cfg
+++ b/config/ZombieAwareness/MobLists.cfg
@@ -196,6 +196,55 @@ tickable_entities {
     B:trite=false
     B:troll=false
     B:trumpetskeleton.TrumpetSkeleton=true
+    B:twilightforest.adherent=false
+    B:twilightforest.armored_giant=false
+    B:twilightforest.blockchain_goblin=false
+    B:twilightforest.boggard=false
+    B:twilightforest.death_tome=false
+    B:twilightforest.fire_beetle=false
+    B:twilightforest.giant_miner=false
+    B:twilightforest.goblin_knight_lower=false
+    B:twilightforest.goblin_knight_upper=false
+    B:twilightforest.harbinger_cube=false
+    B:twilightforest.hedge_spider=true
+    B:twilightforest.helmet_crab=false
+    B:twilightforest.hostile_wolf=false
+    B:twilightforest.hydra=false
+    B:twilightforest.ice_crystal=false
+    B:twilightforest.king_spider=true
+    B:twilightforest.knight_phantom=false
+    B:twilightforest.kobold=false
+    B:twilightforest.lich=false
+    B:twilightforest.lich_minion=true
+    B:twilightforest.maze_slime=false
+    B:twilightforest.mini_ghast=false
+    B:twilightforest.minoshroom=false
+    B:twilightforest.minotaur=false
+    B:twilightforest.mist_wolf=false
+    B:twilightforest.mosquito_swarm=false
+    B:twilightforest.naga=false
+    B:twilightforest.pinch_beetle=false
+    B:twilightforest.redcap=false
+    B:twilightforest.redcap_sapper=false
+    B:twilightforest.rising_zombie=true
+    B:twilightforest.roving_cube=false
+    B:twilightforest.skeleton_druid=true
+    B:twilightforest.slime_beetle=false
+    B:twilightforest.snow_guardian=false
+    B:twilightforest.snow_queen=false
+    B:twilightforest.stable_ice_core=false
+    B:twilightforest.swarm_spider=true
+    B:twilightforest.tower_broodling=true
+    B:twilightforest.tower_ghast=false
+    B:twilightforest.tower_golem=false
+    B:twilightforest.tower_termite=false
+    B:twilightforest.troll=false
+    B:twilightforest.unstable_ice_core=false
+    B:twilightforest.ur_ghast=false
+    B:twilightforest.winter_wolf=false
+    B:twilightforest.wraith=false
+    B:twilightforest.yeti=false
+    B:twilightforest.yeti_alpha=false
     B:"twilightforest:adherent"=false
     B:"twilightforest:armored_giant"=false
     B:"twilightforest:blockchain_goblin"=false
