--- a/config/antiqueatlas/biome_textures.json
+++ b/config/antiqueatlas/biome_textures.json
@@ -156,6 +156,7 @@
     "twilightforest:mushroom_forest": "FOREST",
     "twilightforest:oak_savannah": "SPARSE_FOREST",
     "twilightforest:snowy_forest": "PINES",
+    "twilightforest:spooky_forest": "DENSE_FOREST",
     "twilightforest:thornlands": "HILLS",
     "twilightforest:twilight_clearing": "PLAINS",
     "twilightforest:twilight_forest": "FOREST",
