--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -943,7 +943,277 @@ general {
     I:"mocreatures:flamewraith"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:fly"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:fox"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:goat"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:goldfish"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:greenogre"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:grizzlybear"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:hellrat"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:hippotang"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:horsemob"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:jellyfish"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:kitty"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:kittybed"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:komododragon"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:leoger"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:leopard"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:liard"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:liger"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:lion"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:lither"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:litterbox"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:maggot"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:manderin"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:mantaray"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:manticore"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:manticorepet"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:minigolem"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:mole"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:mouse"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:ostrich"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:pandabear"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:panthard"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:panther"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:panthger"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:petscorpion"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:piranha"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:raccoon"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:rat"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:roach"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:salmon"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:scorpion"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:shark"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:silverskeleton"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:snail"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:snake"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:stingray"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:tiger"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:turkey"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:turtle"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:werewolf"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:wildhorse"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:wildpolarbear"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:wraith"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:wwolf"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mocreatures:wyvern"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:baby_foliaath"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:barako"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:barakoan_barakoana"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:barakoan_player"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:barakoana"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:barakoaya"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:ferrous_wroughtnaut"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:foliaath"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:frostmaw"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:grottol"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:lantern"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mowziesmobs:naga"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_beetle"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_clam"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_deer"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_endermini"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_fox"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_frog"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_hell_sprout"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_lava_cat"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_lurker"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_owl"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_silkworm"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_spirit_beetle"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_spirit_deer"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"mysticalworld:entity_sprout"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:archaeologist"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:ashen"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:crab"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:dweller"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:foxhound"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:frog"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:leash_knot"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:pirate"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"quark:stoneling"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"quark:wraith"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"testdummy:dummy"=1
     I:"tfspellpack:druid_mage"=1
     I:"thaumcraft:brainyzombie"=1
     I:"thaumcraft:cultistcleric"=1
@@ -990,16 +1260,31 @@ general {
     I:"twilightforest:armored_giant"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:bighorn_sheep"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:blockchain_goblin"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:boggard"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:bunny"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:castle_guardian"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:death_tome"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:deer"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:fire_beetle"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:firefly"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:giant_miner"=1
@@ -1026,6 +1311,9 @@ general {
     I:"twilightforest:hydra"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:hydra_head"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:ice_crystal"=1
 
     #  [range: 0 ~ 50, default: 1]
@@ -1042,6 +1330,9 @@ general {
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:lich_minion"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:loyal_zombie"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:maze_slime"=1
@@ -1065,13 +1356,24 @@ general {
     I:"twilightforest:naga"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:penguin"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:pinch_beetle"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:quest_ram"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:raven"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:redcap"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:redcap_sapper"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:rising_zombie"=1
 
     #  [range: 0 ~ 50, default: 1]
@@ -1090,10 +1392,16 @@ general {
     I:"twilightforest:snow_queen"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:squirrel"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:stable_ice_core"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:swarm_spider"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:tiny_bird"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:tower_broodling"=1
@@ -1115,6 +1423,9 @@ general {
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:ur_ghast"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"twilightforest:wild_boar"=1
 
     #  [range: 0 ~ 50, default: 1]
     I:"twilightforest:winter_wolf"=1
