--- a/config/enhancedvisuals.cfg
+++ b/config/enhancedvisuals.cfg
@@ -17,10 +17,10 @@ blur-type {
 
 damage-handler {
     # max duration of blood splash [range: 1 ~ 100000, default: 1500]
-    I:bloodDurationMax=500
+    I:bloodDurationMax=0
 
     # min duration of blood splash [range: 1 ~ 100000, default: 500]
-    I:bloodDurationMin=100
+    I:bloodDurationMin=0
 
     # max duration of one splash [range: 1 ~ 10000, default: 15]
     I:drownMaxDuration=30
@@ -109,6 +109,9 @@ deathmessages {
         5 YEARS!!
         Zyllama had no idea what he was doing, neither do you I see.
         NULL ERROR - snarky death message not found.
+        Working as intended.
+        Just dodge lmao.
+        KEKW
      >
 }
 
