--- a/config/rotm.cfg
+++ b/config/rotm.cfg
@@ -91,11 +91,9 @@ general {
         # ?<dimension> is an optional list of dimension ids in which the effect can/cannot be applied in. This takes form of '[1, -1, 2, 3, ...]'. You can prefix this list with '!' to turn it into a list of dimensions to block instead. For example '![0]' would block only the Overworld.
         # ?<damageType> is the kind of damage that this is triggered by. Leaving this empty results in every damage counting, 'mob' and 'player' results in mob and player melee only respectively, 'arrow' results in an arrow shot etc.
         S:"Mob Defense" <
-            twilightforest:ur_ghast:weakness;100;0;3;20;;;arrow
-            twilightforest:ur_ghast:weakness;100;1;3;20;;;arrow
-            twilightforest:ur_ghast:weakness;100;2;3;20;;;arrow
-            twilightforest:ur_ghast:weakness;100;3;3;20;;;arrow
-            twilightforest:knight_phantom;50;0;5;50
+            twilightforest:ur_ghast;weakness;100;0;3;100;;;
+            twilightforest:knight_phantom;levitation;50;0;5;50;;;
+            twilightforest:snow_queen;blindness;100;3;3;100;;;
          >
 
         # Mob Offense allows to apply potions effects when a mob damages another entity.
@@ -111,7 +109,9 @@ general {
         # ?<damageType> is the kind of damage that this is triggered by. Leaving this empty results in every damage counting, 'mob' and 'player' results in mob and player melee only respectively, 'arrow' results in an arrow shot etc.
         S:"Mob Offense" <
             twilightforest:skeleton_druid;lycanitesmobs:penetration;100;0;10;100;;;
-            twilightforest:nature_bolt;lycanitesmobs:penetration;100;0;10;100;;;
+            twilightforest:skeleton_druid;poison;100;2;10;100;;;
+            twilightforest:nature_bolt;poison;100;2;10;100;;;
+            twilightforest:nature_bolt;lycanitesmobs:penetration;100;2;10;100;;;
             twilightforest:pinch_beetle;lycanitesmobs:weight;100;0;5;100;;;
             twilightforest:slime_beetle;lycanitesmobs:weight;100;0;5;100;;;
             twilightforest:slime_blob;lycanitesmobs:weight;100;0;5;100;;;
@@ -120,7 +120,9 @@ general {
             twilightforest:naga;lycanitesmobs:decay;75;0;20;75;;;
             twilightforest:naga;wither;50;0;20;100;;;
             twilightforest:naga;lycanitesmobs:aphagia;50;1;20;100;;;
-            twilightforest:lich_bolt;hunger;100;0;5;100;;;
+            twilightforest:lich;hunger;100;1;5;100;;;
+            twilightforest:lich;lycanitesmobs:aphagia;100;1;5;100;;;
+            twilightforest:lich_bolt;hunger;100;1;5;100;;;
             twilightforest:lich_bomb;lycanitesmobs:aphagia;100;0;5;100;;;
             twilightforest:minoshroom;weakness;100;1;10;100;;;
             twilightforest:minoshroom;slowness;50;3;10;100;;;
@@ -130,16 +132,17 @@ general {
             twilightforest:knight_phantom;nausea;33;0;10;50;;;
             twilightforest:thrown_wep;levitation;75;0;5;100;;;
             twilightforest:thrown_wep;nausea;33;0;10;50;;;
+            twilightforest:ur_ghast;weakness;100;0;3;100;;;
             twilightforest:yeti_alpha;lycanitesmobs:recklessness;75;0;5;20;;;
             twilightforest:yeti_alpha;lycanitesmobs:penetration;50;0;5;20;;;
             twilightforest:yeti_alpha;lycanitesmobs:bleed;25;0;5;20;;;
-            twilightforest:thrown_ice;lycanitesmobs:paralysis;100;0;5;50;;;
-            twilightforest:thrown_ice;blindness;100;2;5;50;;;
-            twilightforest:falling_ice;blindness;100;2;5;100;;;
-            twilightforest:falling_ice;mining_fatigue;100;4;15;50;;;
-            twilightforest:ice_crystal;lycanitesmobs:penetration;100;2;10;100;;;
+            twilightforest:yeti_alpha;lycanitesmobs:paralysis;100;0;5;50;;;
+            twilightforest:yeti_alpha;blindness;100;2;5;50;;;
+            twilightforest:yeti_alpha;mining_fatigue;100;3;15;50;;;
+            twilightforest:snow_queen;lycanitesmobs:penetration;100;2;10;100;;;
             twilightforest:ice_crystal;lycanitesmobs:bleed;100;2;5;50;;;
-            twilightforest:snow_queen;mining_fatigue;100;4;15;50;;;
+            twilightforest:snow_queen;mining_fatigue;100;3;15;50;;;
+            twilightforest:snow_queen;lycanitesmobs:paralysis;100;3;5;100;;;
          >
 
         # Summon Spawns allows mobs to be summoned when an entity has a target and reaches a certain health.
@@ -167,8 +170,6 @@ general {
         # >
         S:"Summon Spawns" <
             twilightforest:minoshroom;twilightforest:minotaur;50;2-3;15-30;false;false;4;true;true;false;true
-            lycanitesmobs:grue;lycanitesmobs:darkling;100;1-2;10-15;false;true;2;true;true;false;true
-            
          >
     }
 
