tweak ice and fire dreads

--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -239,6 +239,7 @@ entitybasehealth {
     D:EntityTFRedcapSapper=600.0
     D:EntityTFSkeletonDruid=500.0
     D:EntityTFSlimeBeetle=758.3424072265625
+    D:EntityTFSnowQueen=15000.0
     D:EntityTFSwarmSpider=58.8850212097168
     D:EntityTFYeti=292.8366394042969
     D:EntityTreant=132.0
