ice andfire conflict

--- a/config/DLDungeonsJBG/DLDungeonsJBG.cfg
+++ b/config/DLDungeonsJBG/DLDungeonsJBG.cfg
@@ -99,7 +99,7 @@ general {
     # If true all dungeons will exactly one entrance (if the theme allows entrances), 
     # like a typical dungeon crawler (Dungeons will be harder but much no more, no less, 
     # better loot.) If false entrance are random (how the mod originally worked). 
-    B:SingleEntrances=false
+    B:SingleEntrances=true
 
     # True to have dungeons generate naturally, false otherwise.
     B:SpawnWithWordgen=true
