--- a/config/First Aid.cfg
+++ b/config/First Aid.cfg
@@ -21,7 +21,7 @@ general {
     # Only effects the fallback random distribution.
     # If enabled, the default random damage distribution will be changed to leave critical limbs at 1hp if possible.
     # When there is too much damage, the damage will still kill the player. Other distributions that defined are not affected by this.
-    B:useFriendlyRandomDistribution=false
+    B:useFriendlyRandomDistribution=true
 
     # Specifies how the vanilla health is calculated. Affects the visual health bar, as well as the value other mods get when they query the player health.
     # AVERAGE_ALL simply takes all limbs and calculates the average of it.
@@ -243,7 +243,7 @@ general {
         }
 
         body {
-            B:nausea=true
+            B:nausea=false
             B:weakness=true
 
             ##########################################################################################################
@@ -381,12 +381,12 @@ general {
             # The time it takes for a single heal to trigger. Total time this item is active = this * totalHeals
             # Min: 1
             # Max: 32767
-            I:secondsPerHeal=4
+            I:secondsPerHeal=1
 
             # The total heals this item does when applied. 1 heal = half a heart
             # Min: 1
             # Max: 127
-            I:totalHeals=6
+            I:totalHeals=7
         }
 
         ##########################################################################################################
@@ -399,7 +399,7 @@ general {
             # The time it takes in the GUI to apply the item in milliseconds
             # Min: 0
             # Max: 16000
-            I:applyTime=2000
+            I:applyTime=500
 
             # The time it takes for a single heal to trigger. Total time this item is active = this * totalHeals
             # Min: 1
@@ -409,7 +409,7 @@ general {
             # The total heals this item does when applied. 1 heal = half a heart
             # Min: 1
             # Max: 127
-            I:totalHeals=3
+            I:totalHeals=4
         }
 
     }
