--- a/config/colytra.cfg
+++ b/config/colytra.cfg
@@ -2,7 +2,7 @@
 
 general {
     # True to allow separating elytras from chestplates in the crafting table, otherwise false
-    B:"Allow Colytra Separation"=false
+    B:"Allow Colytra Separation"=true
 
     # Sets how the elytra chestplates will handle elytra durability
     # Normal: Elytras will use their own separate durability
