--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -80,6 +80,19 @@
 changer {
     #  [default: ]
     S:changer <
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_head;3
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_chest;7
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_legs;6
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_feet;2
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_head;1
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_chest;1
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_legs;0
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_feet;0
+        DURABILITY;immersiveengineering:faraday_suit_head;200
+        DURABILITY;immersiveengineering:faraday_suit_chest;200
+        DURABILITY;immersiveengineering:faraday_suit_legs;200
+        DURABILITY;immersiveengineering:faraday_suit_feet;200
+        
         ATTACK_DAMAGE;iceandfire:dread_sword;24
         ATTACK_DAMAGE;iceandfire:dread_knight_sword;30
         ATTACK_DAMAGE;iceandfire:dread_queen_sword;45
