--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *
 !config
 !config/**
-/config/sphash.properties
+/config/splash.properties
 /config/CustomSpawner
 /config/CustomSpawner/**
 /config/jei
