--- a/config/globalgamerules.cfg
+++ b/config/globalgamerules.cfg
@@ -20,7 +20,7 @@ gamerules {
     S:disableElytraMovementCheck=false
 
     # Whether the day-night cycle and moon phases progress
-    S:doDaylightCycle=false
+    S:doDaylightCycle=true
 
     # Whether entities that are not mobs should have drops
     S:doEntityDrops=true
