--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -491,20 +491,22 @@ main {
         #   DISTANCE_FROM_ORIGIN - Based on the mob's distance from the origin.
         #   DISTANCE_AND_TIME - Mix of DISTANCE_FROM_SPAWN and WEIGHTED_AVERAGE.
         #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: SERVER_WIDE]
-        S:"Area Mode"=SERVER_WIDE
+        S:"Area Mode"=DISTANCE_FROM_SPAWN
 
         # Change in difficulty when a player sleeps through the night. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Added When Sleeping"=0.0
 
         # Allows difficulty multipliers to be set for specific dimensions. Use the dimension ID and the multiplier you want, separated by a space. For example, "-1 1.5" would make difficulty increase 1.5x faster in the Nether. [default: ]
         S:"Difficulty Dimension Multiplier" <
+            7 0
+            111 0
          >
 
         # Difficulty change per blight kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Per Blight Kill"=0.0
 
         # The amount of difficulty added per unit distance from the origin/spawn, assuming "Area Mode" is set to a distance-based option. Negative numbers will decrease difficulty over distance. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 0.0024999999441206455]
-        S:"Difficulty Per Block"=0
+        S:"Difficulty Per Block"=0.001
 
         # Difficulty change per boss kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Per Boss Kill"=0.0
@@ -521,6 +523,8 @@ main {
 
         # Apply a simple change to the area difficulty in a given dimension. Use the dimension ID, then a space, then an operator (+-*/) followed by a number. For example, "-1 *2.0" would make difficulty 2x higher in the Nether. "1 +20" would increase difficulty by 20 in The End [default: ]
         S:"Dimension Value Factor" <
+            7 0
+            111 0
          >
 
         # Players listed here will be "exempt" from the difficulty system. Exempt players are still part of difficulty calculations, but are treated as having zero difficulty. [default: ]
